--- a/index.css
+++ b/index.css
@@ -173,3 +173,9 @@ body {
 
   justify-content: center;
 }
+@media only screen and (max-width:600px) {
+  body{
+    background-color: black;
+  }
+  
+}
